--- a/opiuu1058_portfolio-main/index.html
+++ b/opiuu1058_portfolio-main/index.html
@@ -27,7 +27,7 @@
     <!-- ===== Aside Start ===== -->
     <div class="aside">
       <div class="logo">
-        <a href="#"><span></span>BiCute</a>
+        <a href="#"><span></span>HANSHIN</a>
       </div>
       <div class="nav-toggler">
         <span></span>
