feat: Rename 'Services' section to 'Projects' in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul class="nav">
         <li><a href="#home" class="active"><span class="icon_wrap"><i class="fa fa-home"></i></span> Home</a></li>
         <li><a href="#about"><span class="icon_wrap"><i class="fa fa-user"></i></span> About</a></li>
-        <li><a href="#services"><span class="icon_wrap"><i class="fa fa-list"></i></span> Services</a></li>
+        <li><a href="#projects"><span class="icon_wrap"><i class="fa fa-list"></i></span> Projects</a></li>
         <li><a href="#portfolio"><span class="icon_wrap"><i class="fa fa-briefcase"></i></span> Portfoilo</a></li>
         <li><a href="#contact"><span class="icon_wrap"><i class="fa fa-comments"></i></span> Contact</a></li>
       </ul>
@@ -245,12 +245,12 @@
       </section>
       <!-- ===== About Section End ===== -->
 
-      <!-- ===== Services Section Start ===== -->
-      <section class="service section" id="services">
+      <!-- ===== Projects Section Start ===== -->
+      <section class="service section" id="projects">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
-              <h2>Services</h2>
+              <h2>Projects</h2>
             </div>
           </div>
           <div class="row">
@@ -303,7 +303,7 @@
           </div>
         </div>
       </section>
-      <!-- ===== Services Section End ===== -->
+      <!-- ===== Projects Section End ===== -->
 
       <!-- ===== Portfolio Section  Start ===== -->
       <section class="portfolio section" id="portfolio">
