feat: Remove Education and Experience sections and add placeholder text

--- a/index.html
+++ b/index.html
@@ -164,78 +164,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="education padd-15">
-                  <h3 class="title">Education</h3>
-                  <div class="row">
-                    <div class="timeline-box padd-15">
-                      <div class="timeline shadow-dark">
-                        <!-- ===== Timeline iTem Start ===== -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i> 2021.12.27 ~ 2022.07.21
-                          </h3>
-                          <h4 class="timeline-title">국가기간•전략산업직종 훈련 과정 수료</h4>
-                          <p class="timeline-text">
-                            - 직업전문학교<br>
-                            - K-Digital Training<br>
-                            - Open API를 활용한 스마트 웹&앱 콘텐츠 실무 개발자 과정 수료
-                          </p>
-                        </div>
-                        <!-- ===== Timeline iTem End ===== -->
-                        <!-- ===== Timeline iTem Start ===== -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i> 2002.02.28 ~ 2004.01.31
-                          </h3>
-                          <h4 class="timeline-title">대학 졸업</h4>
-                          <p class="timeline-text">
-                            - 인터넷 IT계열<br>
-                            - 웹마스터 전공<br>
-                            - 공업전문학사
-                          </p>
-                        </div>
-                        <!-- ===== Timeline iTem End ===== -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="experience padd-15">
-                  <h3 class="title">Experience</h3>
-                  <div class="row">
-                    <div class="timeline-box padd-15">
-                      <div class="timeline shadow-dark">
-                        <!-- ===== Timeline iTem Start ===== -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i> 2022.05.26 ~ 2022.06.22
-                          </h3>
-                          <h4 class="timeline-title">GPS인증 하이브리드 앱 콘텐츠 개발</h4>
-                          <p class="timeline-text">
-                            1) 고래문화특구 장생포를 배경으로 각 지역을 돌아보며 QR코드를 스캔하여 스탬프를 모으면서 다양한 역사적 배경 지식을 알리고, 추가적인 지역발전을 도모하는 목표로 기획.<br>
-                            2) 코스 소개, QR 인증, 스탬프 체크, 팝업 등 JavaScript가 사용된 모든 영역을 담당
-                          </p>
-                        </div>
-                        <!-- ===== Timeline iTem End ===== -->
-                        <!-- ===== Timeline iTem ===== -->
-                        <div class="timeline-item">
-                          <div class="circle-dot"></div>
-                          <h3 class="timeline-date">
-                            <i class="fa fa-calendar"></i> 2022.04.14 ~ 2022.05.30
-                          </h3>
-                          <h4 class="timeline-title">Open API를 활용한 SNS 마케팅 자동화 스마트 웹앱 구현</h4>
-                          <p class="timeline-text">
-                            1) 대구에 위치하고 있는 독립서점 [고스트 북스]를 대상으로 카카오 알림톡 API를 이용한 마케팅 자동화 서비스 프로젝트<br>
-                            2) 프로젝트 기획 및 피드백, 기술 서포트, 웹페이지 최적화 검증 담당<br>
-                            3) 영진전문대학 주최. 디지털 신기술 분야 경진대회 금상 수상
-                          </p>
-                        </div>
-                        <!-- ===== Timeline iTem End ===== -->
-                      </div>
-                    </div>
-                  </div>
+                <div class="padd-15" style="text-align: center; width: 100%;">
+                  <p>이제부터 채워나갑니다</p>
                 </div>
               </div>
             </div>
