feat: Add blog link and update Github link in About section

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                       <p>Birthday : <span>2007.3.29</span></p>
                     </div>
                     <!-- 4 -->
-                    <!-- <div class="info-item padd-15">
-                      <p>Blog : <span>https://bicute.net</span></p>
-                    </div> -->
+                    <div class="info-item padd-15">
+                      <p>Blog : <span><a href="https://opiuu1058.github.io/blog/" target="_blank">https://opiuu1058.github.io/blog/</a></span></p>
+                    </div>
                     <!-- 5 -->
                     <div class="info-item padd-15">
                       <p>Phone : <span>+82 10-3759-6496</span></p>
@@ -117,7 +117,7 @@
                     </div>
                     <!-- 7 -->
                     <div class="info-item padd-15">
-                      <p>Blog : <span><a href="https://github.com/opiuu1058-cyber">https://github.com/opiuu1058-cyber</a></span></p>
+                      <p>Github : <span><a href="https://github.com/opiuu1058-cyber" target="_blank">https://github.com/opiuu1058-cyber</a></span></p>
                     </div>
                     <!-- 8 -->
                     <!-- <div class="info-item padd-15">
