--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
                       <p>Birthday : <span>2007.3.29</span></p>
                     </div>
                     <!-- 4 -->
-                    <div class="info-item padd-15">
-                      <p>Blog : <span><a href="https://opiuu1058.github.io/blog/" target="_blank">https://opiuu1058.github.io/blog/</a></span></p>
-                    </div>
+                    <!-- <div class="info-item padd-15">
+                      <p>Blog : <span>https://bicute.net</span></p>
+                    </div> -->
                     <!-- 5 -->
                     <div class="info-item padd-15">
                       <p>Phone : <span>+82 10-3759-6496</span></p>
                     </div>
-
+                    <!-- 6 -->
+                    <!-- Removed Education Section -->
                     <!-- 7 -->
                     <div class="info-item padd-15">
-                      <p>Github : <span><a href="https://github.com/opiuu1058-cyber" target="_blank">https://github.com/opiuu1058-cyber</a></span></p>
+                      <p>Blog : <span><a href="https://bicute.tistory.com">http://bicute.net</a></span></p>
                     </div>
                     <!-- 8 -->
                     <!-- <div class="info-item padd-15">
@@ -160,7 +161,7 @@
                   </div>
                 </div>
               </div>
-
+              <!-- Removed Education and Experience Sections -->
             </div>
             <!-- // about-content -->
           </div>
@@ -196,7 +197,7 @@
                   <i class="fa fa-handshake"></i>
                 </div>
                 <h4>협업</h4>
-                <p>열린 사고를 가지고 긍적적으로 생각하며, 프로젝트 관리를 위한 협업툴 사용 <br>
+                <p>열린 사고를 가지고 긍정적으로 생각하며, 프로젝트 관리를 위한 협업툴 사용 <br>
                   또는 팀 코드 리뷰 등 협업 문화 또한 중요하게 생각합니다</p>
               </div>
             </div>
