feat: Update placeholder text in Portfolio section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <!-- ===== Portfolio Section  Start ===== -->
       <section class="portfolio section" id="portfolio">
         <div style="display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center; color: var(--text-black-900);">
-          <p>아직은 이렇다할 결과물이 없지만 점점 채워나가겠다</p>
+          <p>채워나가겠습니다</p>
         </div>
 
 
