--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <title>Portfolio</title>
 </head>
 <body class="dark">
+  <canvas id="triangles-background"></canvas>
 
 
 
@@ -47,7 +48,7 @@
 
       <!-- ===== Home Section Start ===== -->
       <section class="home section active" id="home">
-        <iframe src="https://msurguy.github.io/triangles/" frameborder="0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></iframe>
+
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -311,6 +312,7 @@
   <script src="./js/style-switcher.js"></script>
   <!-- ===== Custom JS ===== -->
   <script src="./js/main.js"></script>
+  <script src="./js/triangles.js"></script>
 
 </body>
 </html>
