fix: Add missing jQuery dependency for triangles.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="./style/style-switcher.css">
   <title>Portfolio</title>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body class="dark">
   <canvas id="triangles-background"></canvas>
