refactor: Further attempts to integrate triangles.js background
- Switched to div#container/div#output as per script's expectation.
- Adjusted CSS for #container to position it as background.
- Set section.home background to transparent.
- Removed background from .section for diagnosis (will need re-evaluation).

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body class="dark">
-  <canvas id="triangles-background"></canvas>
+  <div id="container"><div id="output"></div></div>
 
 
 
@@ -48,10 +48,8 @@
     <div class="main-content">
 
       <!-- ===== Home Section Start ===== -->
-      <section class="home section active" id="home">
-
-        <div class="container">
-          <div class="row">
+                  <section class="home section active" id="home">
+                    <div class="container">          <div class="row">
             <div class="home-info padd-15">
               <h3 class="hello">반갑습니다.<br>
                 <span class="name">Web Creator</span> 박다찬 입니다.</h3>
