revert: Revert to simple iframe implementation for background
- Remove local 'triangles.js' script and all related HTML/CSS.
- Re-implement the background using an iframe to ensure stability.
- Add .gitignore to exclude node_modules.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
   <link rel="stylesheet" href="./skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="./style/style-switcher.css">
   <title>Portfolio</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body class="dark">
-  <div id="container"><div id="output"></div></div>
 
 
 
@@ -49,6 +47,7 @@
 
       <!-- ===== Home Section Start ===== -->
                   <section class="home section active" id="home">
+                    <iframe src="https://msurguy.github.io/triangles/" frameborder="0" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></iframe>
                     <div class="container">          <div class="row">
             <div class="home-info padd-15">
               <h3 class="hello">반갑습니다.<br>
@@ -311,7 +310,5 @@
   <script src="./js/style-switcher.js"></script>
   <!-- ===== Custom JS ===== -->
   <script src="./js/main.js"></script>
-  <script src="./js/triangles.js"></script>
-
 </body>
 </html>
