--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <link rel="stylesheet" href="./skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="./style/style-switcher.css">
   <title>Portfolio</title>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body class="dark">
+  <div id="container"><div id="output"></div></div>
 
 
 
@@ -47,7 +49,6 @@
 
       <!-- ===== Home Section Start ===== -->
                   <section class="home section active" id="home">
-                    <iframe src="https://msurguy.github.io/triangles/" frameborder="0" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></iframe>
                     <div class="container">          <div class="row">
             <div class="home-info padd-15">
               <h3 class="hello">반갑습니다.<br>
@@ -310,5 +311,6 @@
   <script src="./js/style-switcher.js"></script>
   <!-- ===== Custom JS ===== -->
   <script src="./js/main.js"></script>
+  <script src="./js/triangles.js"></script>
 </body>
 </html>
