fix: Resolve console errors for triangles.js
- Changed jQuery script to HTTPS to fix mixed content error.
- Added missing #controls div to prevent script crash.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   <link rel="stylesheet" href="./skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="./style/style-switcher.css">
   <title>Portfolio</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body class="dark">
   <div id="container"><div id="output"></div></div>
+  <div id="controls" style="display: none;"></div>
 
 
 
