--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="contact-info-item padd-15">
               <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
               <h4>Location</h4>
-              <p>Daegu, Republic of Korea</p>
+              <p>Suwon, Republic of Korea</p>
             </div>
             <!-- ===== Contact info item End ===== -->
             <!-- ===== Contact info item Start ===== -->
