fix: Update blog link in contact section to GitHub profile

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <!-- Removed Education Section -->
                     <!-- 7 -->
                     <div class="info-item padd-15">
-                      <p>Blog : <span><a href="https://bicute.tistory.com">http://bicute.net</a></span></p>
+                      <p>Blog : <span><a href="https://github.com/opiuu1058-cyber">https://github.com/opiuu1058-cyber</a></span></p>
                     </div>
                     <!-- 8 -->
                     <!-- <div class="info-item padd-15">
