--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="contact-info-item padd-15">
               <div class="icon"><i class="fa fa-globe-europe"></i></div>
               <h4>Blog</h4>
-              <p>https://bicute.net</p>
+                      <p>Blog : <span><a href="https://github.com/opiuu1058-cyber">https://github.com/opiuu1058-cyber</a></span></p>
             </div>
             <!-- ===== Contact info item End ===== -->
           </div>
